--- a/SillySCP/SillySCP.csproj
+++ b/SillySCP/SillySCP.csproj
@@ -237,9 +237,11 @@
         <Compile Include="Commands\Volunteer.cs" />
         <Compile Include="Config.cs" />
         <Compile Include="EventHandler.cs" />
+        <Compile Include="ExiledEvents.cs" />
         <Compile Include="PlayerStat.cs" />
         <Compile Include="Plugin.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="RoundEvents.cs" />
         <Compile Include="Volunteers.cs" />
     </ItemGroup>
     <ItemGroup>
