feat: add discord bot handler
This is just to declutter the main plugin.cs, will declutter the rest later

--- a/SillySCP/SillySCP.csproj
+++ b/SillySCP/SillySCP.csproj
@@ -232,6 +232,7 @@
         <Compile Include="Commands\Kills.cs" />
         <Compile Include="Commands\Volunteer.cs" />
         <Compile Include="Config.cs" />
+        <Compile Include="Handlers\DiscordBot.cs" />
         <Compile Include="Handlers\Player.cs" />
         <Compile Include="Handlers\Server.cs" />
         <Compile Include="PlayerStat.cs" />
