--- a/SillySCP/SillySCP.csproj
+++ b/SillySCP/SillySCP.csproj
@@ -236,6 +236,7 @@
         <Compile Include="Handlers\Player.cs" />
         <Compile Include="Handlers\Server.cs" />
         <Compile Include="PlayerStat.cs" />
+        <Compile Include="PlayerStatUtils.cs" />
         <Compile Include="Plugin.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="RoundEvents.cs" />
