--- a/.github/build.yml
+++ b/.github/build.yml
@@ -1,8 +1,7 @@
 ﻿name: "Build project"
 description: "Test if the project builds, if not then fail the build"
 
-on:
-  - push
+on: [push]
 
 jobs:
   runs-on: windows-2019
