--- a/SillySCP/App.config
+++ b/SillySCP/App.config
@@ -12,8 +12,8 @@
       <dependentAssembly>
         <assemblyIdentity name="Discord.Net.Interactions" publicKeyToken="null" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.15.3.0" newVersion="3.15.3.0" />
-      </dependantAssembly>
-      <dependantAssembly>
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
