--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,11 @@ jobs:
     runs-on: windows-2019
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '4.8'
-      - run: dotnet build SillySCP/SillySCP.csproj
+      - name: Setup NuGet
+        uses: NuGet/setup-nuget@v1.0.5
+      - name: setup-msbuild
+        uses: microsoft/setup-msbuild@v1.1
+      - name: Restore Packages
+        run: nuget restore SillySCP.sln
+      - name: Build solution
+        run: msbuild SillySCP.sln -t:rebuild -property:Configuration=Debug
