--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 ﻿name: "Build project"
 description: "Test if the project builds, if not then fail the build"
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
