--- a/SillySCP/SillySCP.csproj
+++ b/SillySCP/SillySCP.csproj
@@ -19,7 +19,7 @@
   <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="6.0.0-beta0000" PrivateAssets="All" />
     <PackageReference Include="Discord.Net" Version="3.15.3" />
-    <PackageReference Include="ExMod.Exiled" Version="8.14.1" />
+    <PackageReference Include="ExMod.Exiled" Version="9.0.0-alpha.2" />
     <PackageReference Include="Fody" Version="6.8.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
