feat: regular push's should trigger ci too (just looks nicer)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,6 @@
 name: "Build project"
-description: "Test if the project builds, if not then fail the build"
 
-on: [pull_request, workflow_dispatch] 
+on: [pull_request,push, workflow_dispatch] 
 
 jobs:
   build:
