feat: exclusive settings setup

--- a/SillySCP/SillySCP.csproj
+++ b/SillySCP/SillySCP.csproj
@@ -15,6 +15,8 @@
     <Reference Include="UnityEngine" HintPath="$(EXILED_REFERENCES)\UnityEngine.dll" Private="false" />
     <Reference Include="UnityEngine.CoreModule" HintPath="$(EXILED_REFERENCES)\UnityEngine.CoreModule.dll" Private="false" />
     <Reference Include="UnityEngine.PhysicsModule" HintPath="$(EXILED_REFERENCES)\UnityEngine.PhysicsModule.dll" Private="false" />
+    <Reference Include="SecretAPI" HintPath="$(EXILED_REFERENCES)\SecretAPI.dll" Private="false" />
+    <Reference Include="LabApi" HintPath="$(EXILED_REFERENCES)\LabApi.dll" Private="false" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="6.0.0-beta0000" PrivateAssets="All" />
