--- a/SillySCP/SillySCP.csproj
+++ b/SillySCP/SillySCP.csproj
@@ -30,7 +30,7 @@
     <PackageReference Include="Lib.Harmony" Version="2.2.2" />
     <PackageReference Include="Northwood.LabAPI" Version="1.0.2" />
     <PackageReference Include="RueI" Version="2.1.3" />
-    <PackageReference Include="SecretAPI" Version="1.1.2" />
+    <PackageReference Include="SecretAPI" Version="2.0.0-beta4" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.2" PrivateAssets="all" ExcludeAssets="runtime" ReferenceOutputAssembly="false" Private="true" />
   </ItemGroup>
