--- a/SillySCP/SillySCP.csproj
+++ b/SillySCP/SillySCP.csproj
@@ -28,9 +28,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="2.2.2" />
-    <PackageReference Include="Northwood.LabAPI" Version="1.1.1" />
+    <PackageReference Include="Northwood.LabAPI" Version="1.1.4" />
     <PackageReference Include="RueI" Version="3.1.2" />
-    <PackageReference Include="SecretAPI" Version="2.0.0-beta4" />
+    <PackageReference Include="SecretAPI" Version="2.0.3" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.2" PrivateAssets="all" ExcludeAssets="runtime" ReferenceOutputAssembly="false" Private="true" />
   </ItemGroup>
